--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-back-to-top-button": "0.0.14",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll-up": "^1.3.3",
+    "react-scroll-up-button": "^1.6.4",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
