--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^13.1.8",
     "@types/react": "^16.9.18",
+    "@types/react-burger-menu": "^2.6.1",
     "@types/react-dom": "^16.9.5",
+    "@types/react-resize-detector": "^4.2.0",
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
@@ -19,7 +21,9 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-back-to-top-button": "0.0.14",
+    "react-burger-menu": "^2.6.14",
     "react-dom": "^16.13.1",
+    "react-resize-detector": "^4.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
